--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         run: dotnet build azure-sample.sln --configuration Release --no-restore 
 
       - name: Publish
-        run: dotnet publish azure-sample.csproj \ --configuration Release \ --no-build \ --output ${{env.AZURE_WEBAPP_PACKAGEPATH}}
+        run: dotnet publish azure-sample.csproj --configuration Release --no-build --output ${{env.AZURE_WEBAPP_PACKAGEPATH}}
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
